add courses-list component

--- a/src/main/javascript/course-manager-frontend/src/app/users/user-list/user-list.component.html
+++ b/src/main/javascript/course-manager-frontend/src/app/users/user-list/user-list.component.html
@@ -1,5 +1,6 @@
 <div class="card my-5">
   <div class="card-body">
+    <h2>Users:</h2>
     <table class="table table-bordered table-striped">
       <thead class="thead-dark">
       <tr>
