--- a/src/main/javascript/course-manager-frontend/src/app/app.component.html
+++ b/src/main/javascript/course-manager-frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
               <a routerLink="/users" class="btn btn-info">List Users</a>
             </li>
             <li class="list-inline-item">
-              <a routerLink="/adduser" class="btn btn-info">Add User</a>
+              <a routerLink="/courses" class="btn btn-info">List Courses</a>
             </li>
           </ul>
         </div>
