--- a/src/main/javascript/course-manager-frontend/src/app/users/user/user.component.html
+++ b/src/main/javascript/course-manager-frontend/src/app/users/user/user.component.html
@@ -1,10 +1,13 @@
-<p>user works!</p>
-<ul>
-  <li>user id: {{user.id}}</li>
-  <li>user login: {{user.login}}</li>
-  <li>user type: {{user.type}}</li>
-  <li>user firstName: {{user.firstName}}</li>
-  <li>user lastName: {{user.lastName}}</li>
-  <li>user active: {{user.active}}</li>
-
-</ul>
+<div class="card my-5">
+  <div class="card-body">
+    <h2>User</h2>
+    <ul>
+      <li>user id: {{user.id}}</li>
+      <li>user login: {{user.login}}</li>
+      <li>user type: {{user.type}}</li>
+      <li>user firstName: {{user.firstName}}</li>
+      <li>user lastName: {{user.lastName}}</li>
+      <li>user active: {{user.active}}</li>
+    </ul>
+  </div>
+</div>
