add course-enrollment-form and service/endpoint

--- a/src/main/javascript/course-manager-frontend/src/app/courses/assign-teacher-form/assign-teacher-form.component.html
+++ b/src/main/javascript/course-manager-frontend/src/app/courses/assign-teacher-form/assign-teacher-form.component.html
@@ -1,4 +1,5 @@
 <p>assign-teacher:</p>
+<p>Lesson block: {{lessonBlockId}}</p>
 <div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()">
