add enrollments-list component and service

--- a/src/main/javascript/course-manager-frontend/src/app/app.component.html
+++ b/src/main/javascript/course-manager-frontend/src/app/app.component.html
@@ -11,6 +11,9 @@
             <li class="list-inline-item">
               <a routerLink="/courses" class="btn btn-info">List Courses</a>
             </li>
+            <li class="list-inline-item">
+              <a routerLink="/enrollments" class="btn btn-info">List Enrollments</a>
+            </li>
           </ul>
         </div>
       </div>
