--- a/src/main/javascript/course-manager-frontend/src/app/courses/assign-teacher-form/assign-teacher-form.component.html
+++ b/src/main/javascript/course-manager-frontend/src/app/courses/assign-teacher-form/assign-teacher-form.component.html
@@ -9,8 +9,8 @@
               [ngModel]="teacherId"
               name="teacherId"
               (ngModelChange)="onChange($event)">
-        <option [value]="user.id" *ngFor="let user of users">
-          {{user.username}}
+        <option [value]="teacher.id" *ngFor="let teacher of teachers">
+          {{teacher.username}}
         </option>
       </select>
       <button type="submit" class="btn btn-info">Assign</button>
