add check is enrollment exist

--- a/src/main/javascript/course-manager-frontend/src/app/courses/assign-teacher-form/assign-teacher-form.component.html
+++ b/src/main/javascript/course-manager-frontend/src/app/courses/assign-teacher-form/assign-teacher-form.component.html
@@ -6,9 +6,8 @@
     <form (ngSubmit)="onSubmit()">
       <label for="teacherId">select teacher: </label>
       <select id="teacherId"
-              [ngModel]="teacherId"
-              name="teacherId"
-              (ngModelChange)="onChange($event)">
+              [(ngModel)]="teacherId"
+              name="teacherId">
         <option [value]="teacher.id" *ngFor="let teacher of teachers">
           {{teacher.username}}
         </option>
